--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -1,3 +1,21 @@
 extends layout 
 
 block content 
+    h1=title
+    form(method="POST")
+        div.form-group
+            label(for="firstName") First Name: 
+            input(type="text" name="firstName" required)
+            //- first name, last name, email, password, status
+        div.form-group
+            label(for="lastName") Last Name: 
+            input(type="text" name="lastName" required)
+        div.form-group
+            label(for="email") Email: 
+            input(type="email" name="email" required)
+        div.form-group
+            label(for="email") Password: 
+            input(type="password" name="password" required)
+        div.form-group
+            label(for="email") Confirm Password: 
+            input(type="password" name="password" required)       
