--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,57 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: #222222;
 }
 
 a {
   color: #00B7FF;
+}
+
+.sign-up-form {
+  border: 1px solid white;
+  border-radius: 10px;
+  padding-bottom: 5px;
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+h1 {
+  display: flex;
+  justify-content: center;
+  color: white;
+}
+
+.form-group {
+  display: flex;
+  justify-content: center;
+  margin: 5px;
+  color: white;
+}
+
+.input-group {
+  display: flex;
+  justify-content: center;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  margin: 1rem;
+}
+
+button {
+  display: flex;
+  justify-content: center;
+  background-color: #EA4C89;
+  border-radius: 8rem;
+  border-style: none;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  padding: 10px 16px;
 }
