--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,15 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  div.navbar-group
+    h1= title
+    div.button-group
+      button.log-in(type='submit') Log in
+      button.sign-up(type='submit') Sign up
+
+  div.homepage-group
+    h1="You must be logged in to Chatter"
+    div.homepage-button-group
+      button.log-in(type='submit') Log in
+      button.sign-up(type='submit') Sign up
+
