--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 a {
-  color: #00B7FF;
+  text-decoration: none;
 }
 
 button {
@@ -99,4 +99,9 @@ h1 {
   display: flex;
   justify-content: center;
   margin: 1rem;
+}
+
+.btn-primary {
+  background-color: #EA4C89;
+  color: #FFFFFF;
 }
