update for question

--- a/views/login.pug
+++ b/views/login.pug
@@ -14,7 +14,7 @@ block content
             div.form-group
                 label(for="username") Username: 
             div.input-group
-                input(type="text" name="username" placeholder="username" required)
+                input(type="text" name="username" required)
             div.form-group
                 label(for="password") Password: 
             div.input-group
