--- a/views/login.pug
+++ b/views/login.pug
@@ -7,17 +7,21 @@ block content
         div.button-group
             button.log-in(onClick="location.href='/login'") Log in
             button.sign-up(onClick="location.href='/signup'") Sign up
-
-    div.login-form
-        h1=title
-        form(method="POST" action="/login")
-            div.form-group
-                label(for="username") Username: 
-            div.input-group
-                input(type="text" name="username" required)
-            div.form-group
-                label(for="password") Password: 
-            div.input-group
-                input(type="password" name="password" required)
-            div.button
-                button.btn-primary(type='submit') Log in
+    if user 
+        h1 Welcome Back #{user.username}
+        a(href="/logout")
+            p Log Out
+    else
+        div.login-form
+            h1=title
+            form(method="POST" action="/login")
+                div.form-group
+                    label(for="username") Username: 
+                div.input-group
+                    input(type="text" name="username" required)
+                div.form-group
+                    label(for="password") Password: 
+                div.input-group
+                    input(type="password" name="password" required)
+                div.button
+                    button.btn-primary(type='submit') Log in
