--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,5 +3,11 @@ html
   head
     title= title
     link(rel='stylesheet' href='/stylesheets/style.css')
+    div.navbar-group
+      a(href="/")
+        h1= "ChatterZone"
+      div.button-group
+        button.log-in(onClick="location.href='/login'") Log in
+        button.sign-up(onClick="location.href='/signup'") Sign up
   body
     block content
