--- a/views/index.pug
+++ b/views/index.pug
@@ -2,13 +2,24 @@ extends layout
 
 block content
   if user 
-    if user.status === true
-      p Welcome #{user.username}
+    //- h1 Welcome Back #{user.username}!
+    //- div.flexjustifycenter
+    //-   button.log-out(onClick="location.href='/logout'") Log Out
+
+    //-   if (user.status === false)
+    //-     a(href="/profile")
+    //-       p.user.status="Not a member? Click to join."
+  if messages.length > 0
+    each message in messages
+      div.messages
+        | #{message.title}
+        | #{message.date_formatted}
+        | #{message.messageText}
+
+
   else
     .homepage-group
       h1 You must be logged in to Chatter
       .homepage-button-group
         button.log-in(onclick="location.href='/login'") Log in
         button.sign-up(onclick="location.href='/signup'") Sign up
-
-
