--- a/views/index.pug
+++ b/views/index.pug
@@ -11,11 +11,14 @@ block content
         if user.admin === true 
           button.delete-button Delete
     if user.status === true
-      #{user}
       div.create-message
         form(method="POST" action="/message")
           div.create-message-group
-            input(type="text" name="message" required)
+            input(type="text" name="title" placeholder="title" required)
+            br
+            input(type="text" name="messageText" placeholder="message..." required)
+            button.btn-primary(type='submit') Submit
+
 
   else
     .homepage-group
