message field stays at bottom of page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -134,3 +134,8 @@ body > div.login-form > p {
 .messages {
   color: white;
 }
+
+.create-message-group {
+  position: absolute;
+  bottom: 0px;
+}
