--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,20 @@ p {
   color: white;
 }
 
+input {
+  padding: 10px;
+  flex-grow: 1;
+  border-radius: 10px;
+  border: solid 1px #c3c3c3;
+  color: white;
+  background-color: #FFFFFF;
+}
+
+input:focus {
+  outline: none;
+  border: solid 2px #EA4C89;
+}
+
 .flexjustifycenter {
   display: flex;
   justify-content: center;
@@ -136,6 +150,20 @@ body > div.login-form > p {
 }
 
 .create-message-group {
+  width: calc(100vw - 40px);
+  border: 1px solid white;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  padding: 0.5rem;
   position: absolute;
   bottom: 0px;
+}
+
+.message-input {
+  border: 1px solid white;
+  border-radius: 10px;
+  background-color: #222222;
+  width: 90%;
+  margin-right: 1rem;
 }
