--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,7 @@ block content
           form(method="POST" action="/message")
             div.create-message-group
               input.message-input(type="text" name="messageText" placeholder="message..." required)
-              button.btn-primary(type='submit') Submit
+              button.btn-primary(type='submit') Chatter
         if user.admin === true 
           form(method="POST" action=`/delete/${message._id}`)
             button.delete-button(type="submit") Delete
