--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -175,3 +175,21 @@ body > div.login-form > p {
   display: flex;
   justify-content: center;
 }
+
+.user-status {
+  display: flex;
+  margin-left: 1rem;
+}
+
+.profile-form {
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 5px;
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+.profile-form-message {
+  display: flex;
+  justify-content: center;
+}
