--- a/views/index.pug
+++ b/views/index.pug
@@ -24,12 +24,14 @@ block content
           | ******
           div.messageText
             | #{message.messageText}
-
-
+    if user.status === false
+      a(href="/profile")
+        p.user-status="Become a member to chat. Click here to join."
   else
     .homepage-group
       h1 You must be logged in to Chatter
       .homepage-button-group
         button.log-in(onclick="location.href='/login'") Log in
         button.sign-up(onclick="location.href='/signup'") Sign up
+
 
