--- a/views/index.pug
+++ b/views/index.pug
@@ -3,35 +3,41 @@ extends layout
 block content
   if user 
     each message in messages
-      if user.status === true
-        div.messages
-          | #{user.username}
-          | #{message.date_formatted}
-          br
-          | #{message.messageText}
-        div.create-message
-          form(method="POST" action="/message")
-            div.create-message-group
-              input.message-input(type="text" name="messageText" placeholder="message..." required)
-              button.btn-primary(type='submit') Chatter
-        if user.admin === true 
-          form(method="POST" action=`/delete/${message._id}`)
-            button.delete-button(type="submit") Delete
-      else
-        div.messages
-          span.blue-text(style="font-size: 1.1em; color: #7CB9E8;") ******
-          |
-          | ******
-          div.messageText
+      div.message-container
+        if user.status === true
+          div.messages
+            | #{user.username}
+            | #{message.date_formatted}
+            br
             | #{message.messageText}
+          if user.admin === true  
+            form(method="POST" action=`/delete/${message._id}`)
+              button.delete-button(type="submit") Delete
+        else
+          div.messages
+            span.blue-text(style="font-size: 1.1em; color: #7CB9E8;") ******
+            |
+            | ******
+            div.messageText
+              | #{message.messageText}
+    if user.status === true
+      div.create-message
+        form(method="POST" action="/message")
+          div.create-message-group
+            input.message-input(type="text" name="messageText" placeholder="message..." required)
+            button.btn-primary(type='submit') Chatter
     if user.status === false
-      a(href="/profile")
-        p.user-status="Become a member to chat. Click here to join."
+      div.message-container
+        a(href="/profile")
+          p.user-status="Become a member to chat. Click here to join."
   else
     .homepage-group
       h1 You must be logged in to Chatter
       .homepage-button-group
         button.log-in(onclick="location.href='/login'") Log in
         button.sign-up(onclick="location.href='/signup'") Sign up
+
+
+
 
 
