--- a/views/profile.pug
+++ b/views/profile.pug
@@ -16,6 +16,6 @@ block content
             div.button
                 button.btn-primary(type='submit') Join
             if errorMessage 
-                p= errorMessage
+                p.error-message= errorMessage
 
 
