--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-  font: 12px "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 1.5rem "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #222222;
 }
 
@@ -33,9 +33,9 @@ button {
   cursor: pointer;
   display: inline-block;
   font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 1.5rem;
   font-weight: 500;
-  height: 40px;
+  height: 4rem;
   padding: 10px 16px;
 }
 
