--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -108,13 +108,14 @@ h1 {
 .form-group {
   display: flex;
   justify-content: center;
-  margin: 5px;
+  margin: 1rem;
   color: white;
 }
 
 .input-group {
   display: flex;
   justify-content: center;
+  margin: 1rem;
 }
 
 /*button on sign-up form*/
