--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -166,8 +166,9 @@ body > div.login-form > p {
   display: flex;
   justify-content: center;
   padding: 0.5rem;
-  position: sticky;
+  position: absolute;
   bottom: 0;
+  width: 100%;
 }
 
 .message-input {
