--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -182,8 +182,7 @@ body > div.login-form > p {
 }
 
 .error-message {
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
 
 .user-status {
@@ -200,8 +199,7 @@ body > div.login-form > p {
 }
 
 .profile-form-message {
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
 
 .delete-button {
