--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,6 +25,12 @@ input:focus {
   justify-content: center;
 }
 
+.message-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 button {
   display: flex;
   justify-content: center;
@@ -149,13 +155,14 @@ body > div.login-form > p {
   font-size: 14px;
 }
 
-.message-container {
+.single-message-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   border: 1px solid white;
   border-radius: 8px;
   margin: 5px;
+  width: 90%;
   padding-right: 1rem;
 }
 
@@ -166,9 +173,12 @@ body > div.login-form > p {
   display: flex;
   justify-content: center;
   padding: 0.5rem;
-  position: absolute;
+}
+
+.create-message {
+  position: sticky;
   bottom: 0;
-  width: 100%;
+  margin-top: 2rem;
 }
 
 .message-input {
