--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -168,7 +168,6 @@ body > div.login-form > p {
 
 .create-message-group {
   width: calc(100vw - 40px);
-  border: 1px solid white;
   border-radius: 10px;
   display: flex;
   justify-content: center;
@@ -178,7 +177,8 @@ body > div.login-form > p {
 .create-message {
   position: sticky;
   bottom: 0;
-  margin-top: 2rem;
+  margin-top: 1rem;
+  background-color: #222222;
 }
 
 .message-input {
